[gd_scene load_steps=16 format=3 uid="uid://0tbjghjvxg2u"]

[ext_resource type="PackedScene" uid="uid://cx3urgdvffso" path="res://world.tscn" id="1_t0r87"]
[ext_resource type="Texture2D" uid="uid://bs3mdni75fd7t" path="res://assets/images/ui_fire.png" id="2_fa74i"]
[ext_resource type="Script" path="res://scripts/Health.gd" id="3_joida"]
[ext_resource type="Script" path="res://scripts/Score.gd" id="4_o75lu"]
[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="5_cl3jf"]
[ext_resource type="FontFile" uid="uid://bs7lguwppcjty" path="res://assets/smol.ttf" id="6_3rd2w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8pd8j"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_r0ps2"]
color = Color(1, 1, 1, 1)
grow_begin = -1.0
grow_end = -4.0

[sub_resource type="LabelSettings" id="LabelSettings_5qvvv"]
font = ExtResource("6_3rd2w")
font_size = 4
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0v8pr"]
bg_color = Color(0.950882, 0.862148, 0.173012, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 1)
corner_detail = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bj4vu"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 1)
corner_detail = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iao07"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 1)
corner_detail = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_wkxny"]
line_spacing = 1.0
font = ExtResource("6_3rd2w")
font_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_tuw7r"]
line_spacing = 0.0
font = ExtResource("6_3rd2w")
font_size = 4
font_color = Color(1, 1, 0.560784, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f6na"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 1)
corner_detail = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="World" parent="." instance=ExtResource("1_t0r87")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
z_index = 5
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 66.0
offset_bottom = 6.0

[node name="Health" type="TextureRect" parent="HBoxContainer"]
z_index = 5
layout_mode = 2
texture = ExtResource("2_fa74i")
expand_mode = 1
stretch_mode = 2
script = ExtResource("3_joida")

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer"]
z_index = 5
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_8pd8j")
theme_override_styles/fill = SubResource("StyleBoxLine_r0ps2")
max_value = 1000.0
step = 1.0
value = 1000.0
show_percentage = false

[node name="Score" type="Label" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 6.0
offset_right = 32.0
offset_bottom = 18.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_5qvvv")
horizontal_alignment = 1
script = ExtResource("4_o75lu")

[node name="debugcamera" type="Camera2D" parent="."]
position = Vector2(33, 35)
enabled = false
zoom = Vector2(0.275, 0.275)

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_cl3jf")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -21.0
offset_right = 23.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.282353, 0, 0.631373)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 49.0
offset_bottom = 50.0

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_3rd2w")
theme_override_font_sizes/font_size = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_0v8pr")
theme_override_styles/focus = SubResource("StyleBoxFlat_bj4vu")
button_mask = 0
text = "Resume"
text_direction = 1

[node name="Menu" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_3rd2w")
theme_override_font_sizes/font_size = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_0v8pr")
theme_override_styles/focus = SubResource("StyleBoxFlat_iao07")
button_mask = 0
text = "Menu"
text_direction = 1

[node name="VBoxContainer2" type="Control" parent="PauseMenu"]
anchors_preset = 0
offset_left = 13.0
offset_top = 12.0
offset_right = 51.0
offset_bottom = 52.0

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer2"]
layout_mode = 2
offset_right = 38.0
offset_bottom = 5.0
text = "game  over"
label_settings = SubResource("LabelSettings_wkxny")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="PauseMenu/VBoxContainer2"]
layout_mode = 2
offset_top = 6.0
offset_right = 40.0
offset_bottom = 10.0
size_flags_vertical = 0
text = "NEW  HIGH!"
label_settings = SubResource("LabelSettings_tuw7r")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PauseMenu/VBoxContainer2"]
layout_mode = 2
offset_left = 8.0
offset_top = 11.0
offset_right = 27.0
offset_bottom = 16.0
size_flags_vertical = 0
text = "Score:"
label_settings = SubResource("LabelSettings_wkxny")
vertical_alignment = 1

[node name="Score" type="Label" parent="PauseMenu/VBoxContainer2"]
layout_mode = 2
offset_top = 16.0
offset_right = 40.0
offset_bottom = 26.0
size_flags_vertical = 0
text = "517510785017501957"
label_settings = SubResource("LabelSettings_wkxny")
autowrap_mode = 1
visible_characters_behavior = 2

[node name="Label4" type="Label" parent="PauseMenu/VBoxContainer2"]
layout_mode = 2
offset_left = 19.0
offset_top = 32.0
offset_right = 39.0
offset_bottom = 37.0
text = "+200G"
label_settings = SubResource("LabelSettings_wkxny")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Button" parent="PauseMenu/VBoxContainer2"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 18.0
offset_bottom = 37.0
size_flags_horizontal = 4
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_3rd2w")
theme_override_font_sizes/font_size = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_0v8pr")
theme_override_styles/focus = SubResource("StyleBoxFlat_5f6na")
button_mask = 0
text = "Menu"
text_direction = 1

[connection signal="button_down" from="PauseMenu/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_button_down"]
[connection signal="button_down" from="PauseMenu/VBoxContainer/Menu" to="PauseMenu" method="_on_menu_button_down"]
[connection signal="button_down" from="PauseMenu/VBoxContainer2/Menu" to="PauseMenu" method="_on_menu_button_down"]
